netbox/netbox-to-external-dns-controller.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netbox-dns-sync
  namespace: netbox
  labels:
    app.kubernetes.io/name: netbox-dns-sync
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: netbox-dns-sync
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: netbox-dns-sync
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port: '8080'
        prometheus.io/path: /metrics
    spec:
      serviceAccountName: netbox-dns-sync
      containers:
        - name: netbox-dns-sync
          image: ghcr.io/tpaulus/netbox-to-external-dns-controller:latest@sha256:7c32baf71cf8e9f42399f0b374dab1ecc89c9c921234e93de56f7a487d5e0e40
          ports:
            - name: metrics
              containerPort: 8080
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            capabilities:
              drop:
                - ALL
