netbox/database.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: db
spec:
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: psql
  serviceName: database
  template:
    metadata:
      labels:
        app: psql
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port: '9187'
    spec:
      containers:
        - image: postgres:18.4
          name: psql
          ports:
            - containerPort: 5432
              name: psql
          volumeMounts:
            - name: persistent-storage
              mountPath: /var/lib/postgresql/data
          resources:
            requests:
              memory: 1024Mi
              cpu: 250m
            limits:
              memory: 2048Mi
              cpu: '2'
          livenessProbe:
            tcpSocket:
              port: psql
            initialDelaySeconds: 5
            timeoutSeconds: 1
          readinessProbe:
            tcpSocket:
              port: psql
            timeoutSeconds: 1
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
        - image: quay.io/prometheuscommunity/postgres-exporter 
          name: psql-exporter
          ports:
            - containerPort: 9187
              name: metrics
          resources:
            requests:
              memory: 128Mi
              cpu: 50m
            limits:
              memory: 128Mi
              cpu: 100m
          volumeMounts:
            - name: ds-uri
              mountPath: /var/run/datasource_uri
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
      volumes:
        - name: ds-uri
          emptyDir: {}
        - name: persistent-storage
          persistentVolumeClaim:
            claimName: db-storage-claim
---
apiVersion: v1
kind: Service
metadata:
  name: db
spec:
  ports:
    - port: 5432
  selector:
    app: psql
