netbox/netbox-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: netbox
  namespace: netbox
  labels:
    k8s-app: netbox
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/port:   '8080'
spec:
  ports:
  - port: 80
    targetPort: http
  selector:
    k8s-app: netbox
