netbox/netbox-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: netbox
  namespace: netbox
spec:
  rules:
    - host: netbox.ing.k3s.brickyard.whitestar.systems
      http:
        paths:
          - backend:
              service:
                name: netbox
                port:
                  number: 80
            path: /
            pathType: Prefix
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: inject-headers
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: https
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: netbox-ext
  namespace: netbox
  annotations:
    external-dns.kubernetes.io/target: lfp.it.paulus.family
    traefik.ingress.kubernetes.io/router.middlewares: netbox-inject-headers@kubernetescrd
spec:
  tls:
    - hosts:
        - netbox.whitestar.systems
      secretName: netbox-whitestar-systems-cert
  rules:
    - host: netbox.whitestar.systems
      http:
        paths:
          - backend:
              service:
                name: netbox
                port:
                  number: 80
            path: /
            pathType: Prefix
